# VulkanPlayground

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/models/: bistro_exterior.glb  bistro_exterior_8k.t64  sponza.t64
assets/shaders/: colored.vert  triangle.vert
assets/vox/: sponza.vox  teapot.vox  test.vox  test_rotations.vox  test_rotations2.vox
ext/HosekWilkie_SkylightModel_C_Source/: ArHosekSkyModel.h  CMakeLists.txt
ext/SimplexNoise/: CMakeLists.txt
ext/VulkanMemoryAllocator/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
ext/stb/: CMakeLists.txt
ext/stb/include/: stb_image.h
shaders/: colored.frag  colored_textured.frag  colored_textured.vert  raytracing.frag  raytracing.slang  raytracing.vert  raytracing_push_contants.glsl
src/: Application.cpp  Application.hpp  BinaryFstream.cpp  BinaryFstream.hpp  Camera.cpp  Camera.hpp  ImGuiWrapper.cpp  ImGuiWrapper.hpp  Octree.cpp  Octree.hpp  Swapchain.cpp  Swapchain.hpp  Tree64.cpp  Tree64.hpp  VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp  filesystem.hpp  main.cpp  math.hpp  t64.cpp  t64.hpp  vox.cpp  vox.hpp  voxelizer.cpp  voxelizer.hpp  vulkan_utils.cpp  vulkan_utils.hpp
